# messaging

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
main/cpp/include/model/: CheckIMEI.hpp
main/cpp/include/serialize/: SerializeHelper.hpp
main/cpp/src/: MessageConsumer.cpp  MessageProducer.cpp
main/cpp/src/serialize/: SerializeHelper.cpp
